# learning_MLOPS

./: commands  get-started.ipynb  main.py  mlflow.db  pyproject.toml
1-MLProject/: gettingstarted.ipynb  housepricepredict.ipynb  mlflow.db
2-DLMLFLOW/: mlflow.db  starter.ipynb
2-DLMLFLOW/mlruns/1/models/m-1892f304d92c406c9ddd01bbb81b7523/artifacts/: MLmodel
2-DLMLFLOW/mlruns/1/models/m-1892f304d92c406c9ddd01bbb81b7523/artifacts/data/: model.keras
2-DLMLFLOW/mlruns/1/models/m-4f7f392869924a549d59f603149e7c06/artifacts/: MLmodel  conda.yaml
2-DLMLFLOW/mlruns/1/models/m-4f7f392869924a549d59f603149e7c06/artifacts/data/: model.keras
2-DLMLFLOW/mlruns/1/models/m-5286e4921cb04343a5ef05eeb8439e7a/artifacts/: MLmodel
2-DLMLFLOW/mlruns/1/models/m-5286e4921cb04343a5ef05eeb8439e7a/artifacts/data/: model.keras
2-DLMLFLOW/mlruns/1/models/m-ba2e062ede0f4053821386194a59b370/artifacts/: MLmodel
2-DLMLFLOW/mlruns/1/models/m-ba2e062ede0f4053821386194a59b370/artifacts/data/: model.keras
2-DLMLFLOW/mlruns/1/models/m-e659b2b5f9414f2c9a0c980756cf2e25/artifacts/: MLmodel
2-DLMLFLOW/mlruns/1/models/m-e659b2b5f9414f2c9a0c980756cf2e25/artifacts/data/: model.keras
